tests/mm0_mmu/fail/bad-int3.mm0
--                  V--  forbidden sign
prefix p : $+$ prec +1;
